[gd_scene load_steps=6 format=3 uid="uid://dj3iagbdv13y8"]

[ext_resource type="Script" path="res://Objects/gui.gd" id="1_ks6tr"]
[ext_resource type="Texture2D" uid="uid://bcbiy1utibhdm" path="res://assets/objects/gui.png" id="1_w3nnn"]
[ext_resource type="AudioStream" uid="uid://cife5bc6cwx65" path="res://assets/soundeffect/anime-wow-sound-effect.mp3" id="3_05cxy"]
[ext_resource type="PackedScene" uid="uid://du1d1cjiajwx0" path="res://Utility/upgrade_db.tscn" id="4_3inby"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ieru4"]
bg_color = Color(0.133333, 0.129412, 0.117647, 1)

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_ks6tr")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Level" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Level 1"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 2

[node name="EnemySymbol" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("1_w3nnn")
stretch_mode = 4

[node name="EnemyNo" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "100
"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 20

[node name="LevelUp" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
process_mode = 2
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ieru4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/LevelUp"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_right = 70.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/LevelUp/MarginContainer"]
layout_mode = 2
text = "Level Up
"
horizontal_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/LevelUp"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_left = 10.0
offset_top = 50.0
offset_right = 1270.0
offset_bottom = 130.0
theme_override_constants/separation = 10

[node name="LevelUpSound" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/LevelUp"]
stream = ExtResource("3_05cxy")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(1880, 80)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Upgrades" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 32

[node name="UpgradeDB" parent="." instance=ExtResource("4_3inby")]
